[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hsl = "0.1.1"
itertools-num = "0.1.3"
num = "0.4.1"
transvoxel = "1.0.0"
wasm-bindgen = "0.2.87"
